upload help documents of v1.10.2

--- a/index.html
+++ b/index.html
@@ -38,28 +38,18 @@
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
-<p>Big data management of genome-wide variants using the CoreArray C++ library:
-genotypic data and annotations are stored in an array-oriented manner,
-offering efficient access of genetic variants using the R programming language.</p>
+<p>Big data management of genome-wide sequence variants with thousands of individuals: genotypic data (e.g., SNPs, indels and structural variation calls) and annotations in GDS files are stored in an array-oriented and compressed manner, with efficient data access using the R programming language.</p>
 
 <h2>
 <a id="bioconductor" class="anchor" href="#bioconductor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bioconductor:</h2>
 
-<p>Release Version: v1.8.0</p>
+<p>Release Version: v1.10 <a href="http://www.bioconductor.org/packages/release/bioc/html/SeqArray.html">(http://www.bioconductor.org/packages/release/bioc/html/SeqArray.html)</a></p>
+<p>Release Branch: <a href="release/SeqArrayTutorial.html">Tutorial</a>, <a href="release/help/00Index.html">Help Documents</a></p>
 
-<p><a href="http://www.bioconductor.org/packages/release/bioc/html/SeqArray.html">http://www.bioconductor.org/packages/release/bioc/html/SeqArray.html</a></p>
-
-<p>Development Version: v1.9.--</p>
-
-<p><a href="http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html">http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html</a></p>
-
-<h2>
-<a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>R Documents</h2>
-
-<p>Release Branch: <a href="release/help/00Index.html">Help Documents</a></p>
-
+<p>Development Version: v1.11 <a href="http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html">(http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html)</a></p>
 <p>Develop Branch: <a href="devel/SeqArrayTutorial.html">Tutorial</a>, <a href="devel/help/00Index.html">Help Documents</a></p>
 
+<h2>
 </div>
 
 <!--[if !IE]><script>fixScale(document);</script><![endif]-->
