--- a/release/help/00Index.html
+++ b/release/help/00Index.html
@@ -5,21 +5,10 @@
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 <h1> Big Data Management of Genome-Wide Sequence Variants
-<img class="toplogo" src="../../../doc/html/logo.jpg" alt="[R logo]" />
 </h1>
 <hr/>
-<div style="text-align: center;">
-<a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
-<a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.10.1</h2>
-
-<ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
-<li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
-<li><a href="../NEWS">Package NEWS</a>.</li>
-</ul>
-
+<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.10.2</h2>
 <h2>Help Pages</h2>
-
 
 <table width="100%">
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray-package</a></td>
