--- a/release/help/seqAlleleFreq.html
+++ b/release/help/seqAlleleFreq.html
@@ -51,7 +51,7 @@ numeric value (like <code>0L</code>), it returns a numeric vector for the specif
 alleles (<code>0L</code> for the reference allele, <code>1L</code> for the first alternative
 allele, etc). If <code>ref.allele</code> is a numeric vector, <code>ref.allele</code>
 specifies each allele per site. If <code>ref.allele</code> is a character vector,
-<code>ref.allele</code> specifies the desired allele for each site (e.g.,
+<code>ref.allele</code> specifies the desired allele for each site (e.g,
 ancestral allele for the derived allele frequency).
 </p>
 
@@ -92,5 +92,5 @@ summary(seqAlleleFreq(f, AA))
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
 </body></html>
