--- a/release/help/seqGDS2VCF.html
+++ b/release/help/seqGDS2VCF.html
@@ -56,7 +56,7 @@ in the FORMAT field</p>
 the export.
 </p>
 <p>GDS &ndash; Genomic Data Structures used for storing genetic array-oriented
-data, and the file format used in the <a href="../../gdsfmt/html/gdsfmt-package.html">gdsfmt</a> package.
+data, and the file format defined in the <a href="../../gdsfmt/html/gdsfmt-package.html">gdsfmt</a> package.
 </p>
 <p>VCF &ndash; The Variant Call Format (VCF), which is a generic format for
 storing DNA polymorphism data such as SNPs, insertions, deletions and
@@ -153,5 +153,5 @@ unlink(c("tmp.vcf.gz", "tmp1.vcf.gz", "tmp2.vcf.gz"))
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
 </body></html>
