--- a/release/help/seqVCF.Header.html
+++ b/release/help/seqVCF.Header.html
@@ -73,13 +73,17 @@ Description &ndash; a variable description.
 <td>
 <p>the link of assembly</p>
 </td></tr>
+<tr valign="top"><td><code>reference</code></td>
+<td>
+<p>genome reference</p>
+</td></tr>
 <tr valign="top"><td><code>header</code></td>
 <td>
 <p>the other header lines</p>
 </td></tr>
-<tr valign="top"><td><code>num.ploidy</code></td>
+<tr valign="top"><td><code>ploidy</code></td>
 <td>
-<p>the number of ploidy, two for humans</p>
+<p>ploidy, two for humans</p>
 </td></tr>
 </table>
 
@@ -92,8 +96,9 @@ Description &ndash; a variable description.
 <h3>References</h3>
 
 <p>The variant call format and VCFtools.
-Danecek P, Auton A, Abecasis G, Albers CA, Banks E, DePristo MA, Handsaker RE,
-Lunter G, Marth GT, Sherry ST, McVean G, Durbin R; 1000 Genomes Project Analysis Group.
+Danecek P, Auton A, Abecasis G, Albers CA, Banks E, DePristo MA,
+Handsaker RE, Lunter G, Marth GT, Sherry ST, McVean G, Durbin R;
+1000 Genomes Project Analysis Group.
 Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 </p>
 
@@ -115,5 +120,5 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 seqVCF.Header(vcf.fn)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
 </body></html>
